# menu_generator

./: Cargo.toml  menu_items.json
src/: main.rs
