[package]
name = "menu_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = { version = "0.6.0", features = ["editor"] }
itertools = "0.10.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
